Bug 1721359 - With allow-gtk-dark-theme, keep content pages using system color scheme. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D120824